@@ -84,6 +84,7 @@ SVN trunk:
      downloaded files.
  * fix untranslated unit create dialog (#4424)
  * random map generator now uses island_size (#4458)
+ * documentation switch from CVS to SVN and from Savannah to Gna!
  * various bug fixes and code cleanups
 
 Version 1.0rc1:
